--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "moment": "^2.11.2",
+    "mongodb-uri": "^0.9.7",
+    "mongoose": "^4.4.1",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   }
