--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongodb-uri": "^0.9.7",
     "mongoose": "^4.4.1",
     "morgan": "~1.6.1",
+    "node-promise": "^0.5.12",
     "serve-favicon": "~2.3.0"
   }
 }
